--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "Unity Editor",
             "type": "unity",
-            "path": "/D:/Learn/Unity/Unity2dFirstGame/Library/EditorInstance.json",
+            "path": "/E:/Unity/Unity2dFirstGame/Library/EditorInstance.json",
             "request": "launch"
         },
         {
